test/should_pass/basic_009.grg
actions basic_009;

rule r {
	pattern {
	}
	replace {
		x : Node;
	}
}

