test/should_fail/inh_007.grg
actions inh_007 using inh_model_007;

rule bla { pattern{} replace{} }
